fix(translations): better translate repository operations

--- a/weblate/locale/cs/LC_MESSAGES/django.po
+++ b/weblate/locale/cs/LC_MESSAGES/django.po
@@ -13541,12 +13541,12 @@ msgstr "Odemčení součásti"
 #. Translators: Name of event in the history
 #: weblate/trans/models/change.py:393
 msgid "Changes committed"
-msgstr "Provedeny změny"
+msgstr "Zapsány změny"
 
 #. Translators: Name of event in the history
 #: weblate/trans/models/change.py:395
 msgid "Changes pushed"
-msgstr "Změny odeslány"
+msgstr "Odeslány změny"
 
 #. Translators: Name of event in the history
 #: weblate/trans/models/change.py:397
