--- a/docs/changes/contributors/5.8.4.rst
+++ b/docs/changes/contributors/5.8.4.rst
@@ -1,2 +1,6 @@
-..
-   scripts/prepare-release fills this
+
+Code contributions
+    Michal Čihař, gersona, Mehdi El Oualy
+
+Documentation contributions
+    Michal Čihař
